<resources>
    <string name="app_name">ciclo_mestrual</string>
    <string name="title_activity_menu">menuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_anticonceptivos">Anticonceptivos</string>
    <string name="menu_calendario_menstrual">Calendario Menstrual</string>
    <string name="menu_calendario_prenatal">Calendario Prenatal</string>
    <string name="menu_psicologia">Psicologia</string>
    <string name="menu_cartelera_informativa">Cartelera Informativa</string>
</resources>