<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_anticonceptivos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_anticonceptivos" />
        <item
            android:id="@+id/nav_calendario_menstrual"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_calendario_menstrual" />
        <item
            android:id="@+id/nav_cartelera_informativo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_cartelera_informativa" />
        <item
            android:id="@+id/nav_calendario_prenatal"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_calendario_prenatal" />
        <item
            android:id="@+id/nav_psicolgia"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_psicologia" />
    </group>
</menu>